@@ -4,6 +4,7 @@ mpdscribble 0.13 - not yet released
     - try all IP addresses from the resolver, resulting in better IPv6 support
     - smaller buffers, less memory usage
   * support the Last.fm Submissions Protocol v1.2
+    - including support for 'now playing'
   * HTTP proxy support
   * support for libsoup 2.4
   * fixed several crash bugs
